--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.1.0",
     "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.3",
+    "lucide-react": "^0.543.0",
     "next": "14.2.32",
     "react": "^18",
     "react-dom": "^18",
